# ncnn-android-yolo11

./: local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: model_sim.ncnn.param
app/src/main/java/com/tencent/yolo11ncnn/: MainActivity.java  YOLO11Ncnn.java
app/src/main/jni/: CMakeLists.txt  gdrnet.cpp  gdrnet.h  ndkcamera.cpp  ndkcamera.h  yolo11.h  yolo11ncnn.cpp
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
